--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2015-07-16>
+#+DATE: Time-stamp: <2015-07-17>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -17,7 +17,6 @@
 #+STARTUP: showall
 * 16.1.2:
 ** Bugs
-   - unload-feature not working?
    - Mouse completion is working with *middle* mouse button (mouse-2) but only
      on the second LMB or, in the case of C-c C-s, not at all.
    - *mwrite
@@ -27,18 +26,17 @@
    - C-c C-a does not align a pragraph if the mark was not set (first
       time file visit)!!!!!
 ** Wish-list
+   - Changing license type for -display-license-status with C-u
+   - Wikipedia entry APDL
+   - splash screen?
    - tool tip help-echo properties for keywords!
    - saving option for -license-file, -lmutil, -program, ...
    - Check for valid license types for the solver
    - start WB
-   - start anslic_admin, with launcher redundant
-   - start launcher
    - license and template status line always in the first visible line
      of buffer (in-place-annotations?)
    - -license-status interactive, specifying a temporal license type,
      optional filters for output?
-   - Licensing initialisation, read \ANSYS Inc\Shared
-     Files\Licensing\ansyslmd.ini
    - Documentation of installation and configuration!
    - C-c C-c checking blocks
    - MinGWin: FindWindow +  ActivateWin + SendKeys?
