--- a/helper/tools/ansys-mode/README
+++ b/helper/tools/ansys-mode/README
@@ -1,7 +1,7 @@
 Welcome to ANSYS-Mode, please read the accompanying tutorial
-/appl/tools/ansys-mode/current/A-M_introductory_tutorial-16.1.1.pdf.
-(By the way: You can also view PDF files in Emacs and it uses the same
-key-bindings as the BASH shell ...)
+/appl/tools/ansys-mode/current/A-M_introductory_tutorial.pdf first.
+(By the way: You can also view PDF files in Emacs editor and Emacs
+uses the same key-bindings as the BASH shell ...)
 
 /appl/tools/bin/A-M-16.1.1.sh starts Emacs with the APDL editing mode
 enabled. For example:
@@ -9,7 +9,7 @@ enabled. For example:
  $ A-M-16.1.1.sh ../ansys-mode/current/doc/example.mac
 
 ANSYS-Mode is automatically switched on for the following types (file
-suffixes): .ans, .mac, .anf, .dat, .inp.
+suffixes): .ans, .mac, .anf, .dat and .inp.
 
 If you want to start Emacs in text (terminal) mode instead of its GUI
 mode, please provide the command line argument `-nw', like in the
@@ -18,13 +18,17 @@ following line:
  $ A-M-16.1.1.sh macro.ans -nw
 
 ======================================================================
-			      Important
+			     NOTE:
 
-Most functionality should work for any installed ANSYS version, but
-for some advanced stuff - like calling the help documentation in your
-browser - ANSYS-Mode 16.1.1 assumes that ANSYS161 is installed on your
-system!  You can configure ANSYS-Mode to work with any ANSYS version,
-please have a look in the configuration file A-M.el.
+Most functionality works for any installed ANSYS version, but for some
+advanced stuff - like calling the help documentation in your browser -
+ANSYS-Mode 16.1.1 assumes that ANSYS V161 is installed on your system!
+You can configure ANSYS-Mode to work together with any ANSYS version,
+please have a look in the configuration file Conti.el, it is a must
+since the respective menu entries doesn't work on our non default
+ANSYS installation path.  (There are only two variables which might
+need to be adjusted.)
+
 ======================================================================
 
 If you want to enable ANSYS-Mode in Emacs without calling the wrapper
@@ -33,11 +37,12 @@ If you want to enable ANSYS-Mode in Emacs without calling the wrapper
 --->8 ----------------------------------------------------------------
 
 (add-to-list 'load-path "/appl/tools/ansys-mode/current")
-(require 'A-M)
+(load "A-M") ; the main ANSYS-Mode configuration file
+(load "helper/tools/ansys-mode/Conti") ; the Company's configuration file
 
 --- 8< ---------------------------------------------------------------
 
 The code is hosted on https://github.com/dieter-wilhelm/ansys-mode.
 Please report bugs or give feedback: dieter@duenenhof-wilhelm.de
 
-Thanks you
+Thank you
