--- a/A-M.org
+++ b/A-M.org
@@ -475,9 +475,10 @@ But the solver/interpreter is checking this server as well!?
   ;; adding the directory of this (loaded) file to the load-path
   (add-to-list 'load-path (file-name-directory load-file-name))
   (setq ansys-mode-install-directory
-          (directory-name (file-name-directory load-file-name)))
-  (message "Installation directory of ANSYS-Mode is " ansys-mode-install-directory)
+           (file-name-directory load-file-name))
+  (message "Installation directory of ANSYS-Mode is %s" ansys-mode-install-directory)
   (load "ansys-mode")
+  ;; we initialise already here to make the autoloaded functions available
   (message "Initialising defcustoms.")
   (ansys-initialise-defcustoms)
   (message "ANSYS-Mode enabled.")
