--- a/TODO.org
+++ b/TODO.org
@@ -18,9 +18,10 @@
 * 16.1.2:
 ** Bugs
    - Documentation of installation and configuration!
-   - C-c C-a does not align a pragraph if the mark was not set (first
-      time file visit)!!!!!
+** Freeze
+   - list of all new functions in -bug-report
 ** Wish-list
+   - Change versioning scheme to 161.2
    - Mouse completion is working with *middle* mouse button (mouse-2) but only
      on the second LMB or, in the case of C-c C-s, not at all.
    - *mwrite
@@ -32,7 +33,6 @@
      with electric-pair-mode? We need `'' for strings and character
      parameters,`%' for parameter substitution,`(' for functions
    - C-c C-a does not take signs (e.g. +13, -8) befor numbers into account
-   - list of all new functions in -bug-report
    - -wb function?
    - Changing license type on the fly (with C-u) for -display-license-status
    - tool tip help-echo properties for keywords!
@@ -172,7 +172,7 @@
 ** Freeze proceedures
   - check whether all undocumented commands
     [[elisp:(find-tag "Ansys_undocumented_commands")]]
-    are still working in V 16.2
+    are still working in V 161
   - (tags-search "TODO")
   - (tags-search "FIXME")
   - checkdoc, -ansys-template.el, -ansys-process.el, -mode.el done except
